--- a/fineed/package.json
+++ b/fineed/package.json
@@ -16,6 +16,8 @@
     "immutable": "^4.0.0-rc.12",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "recoil": "^0.1.2",
     "typescript": "^4.0.3",
@@ -44,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-helmet": "^6.1.0",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
