--- a/fineed/functions/package.json
+++ b/fineed/functions/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
-    "firebase-tools": "^9.4.0"
+    "firebase-tools": "^9.4.0",
+    "node-html-parser": "^2.1.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0",
