--- a/fineed/functions/package.json
+++ b/fineed/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "dom-parser": "^0.1.6",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.13.2",
     "firebase-tools": "^9.4.0",
