--- a/fineed/functions/package.json
+++ b/fineed/functions/package.json
@@ -17,8 +17,8 @@
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.13.2",
     "firebase-tools": "^9.4.0",
-    "node-html-parser": "^2.1.0",
-    "rss-parser": "^3.11.0"
+    "rss-parser": "^3.11.0",
+    "jsdom": "16.4.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0",
