--- a/fineed/functions/tsconfig.json
+++ b/fineed/functions/tsconfig.json
@@ -7,7 +7,8 @@
     "sourceMap": true,
     "strict": true,
     "target": "es2017",
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": ["node_modules/@types"],
+    "jsx": "react"
   },
   "compileOnSave": true,
   "include": [
