--- a/fineed/package.json
+++ b/fineed/package.json
@@ -17,9 +17,11 @@
     "@types/react-dom": "^16.9.8",
     "firebase": "^8.2.4",
     "immutable": "^4.0.0-rc.12",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-highcharts": "^16.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "recoil": "^0.1.2",
@@ -53,6 +55,7 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.0",
+    "@types/react-highcharts": "^16.0.2",
     "@types/react-router-dom": "^5.1.7"
   }
 }
