--- a/fineed/package.json
+++ b/fineed/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-highcharts": "^16.1.0",
+    "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "recoil": "^0.1.2",
