--- a/fineed/package.json
+++ b/fineed/package.json
@@ -16,6 +16,8 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "firebase": "^8.2.4",
+    "highcharts": "^9.0.1",
+    "highcharts-react-official": "^3.0.0",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.29.1",
     "react": "^17.0.1",
