--- a/fineed/functions/package.json
+++ b/fineed/functions/package.json
@@ -14,11 +14,12 @@
   "main": "lib/index.js",
   "dependencies": {
     "dom-parser": "^0.1.6",
+    "finnhub": "^1.2.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.13.2",
     "firebase-tools": "^9.4.0",
-    "rss-parser": "^3.11.0",
-    "jsdom": "16.4.0"
+    "jsdom": "16.4.0",
+    "rss-parser": "^3.11.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0",
