--- a/fineed/functions/package.json
+++ b/fineed/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "bad-words": "^3.0.4",
     "dom-parser": "^0.1.6",
     "finnhub": "^1.2.1",
     "firebase-admin": "^9.2.0",
