--- a/fineed/functions/package.json
+++ b/fineed/functions/package.json
@@ -20,8 +20,9 @@
     "firebase-functions": "^3.13.2",
     "firebase-tools": "^9.4.0",
     "jsdom": "16.4.0",
+    "md5-typescript": "^1.0.5",
     "rss-parser": "^3.11.0",
-    "md5-typescript":"^1.0.5"
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0",
